Images and html updates

--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
       </p>
       <div class="modules-list">
         <div class="module">
-          <span>Módulo 01:</span> primeiros passos com CSS
+          <span style="color:rgb(51, 168, 219);">Módulo 01:</span> primeiros passos com CSS
         </div>
         <div class="module">
-          <span>Módulo 02:</span> trabalhando com layouts no CSS
+          <span style="color:rgb(51, 168, 219);">Módulo 02:</span> trabalhando com layouts no CSS
         </div>
         <div class="module">
-          <span>Módulo 03:</span> refinando os estilos CSS das nossas páginas
+          <span style="color:rgb(51, 168, 219);" >Módulo 03:</span> refinando os estilos CSS das nossas páginas
         </div>
       </div>
     </section>
@@ -53,7 +53,7 @@
   </main>
   <footer>
     <img class="dio-logo" src="assets/images/dio-logo.png" title="Logotipo DIO com o texto make the change" alt="Logotipo DIO com o texto make the change">
-    <p>Acesse <a href="https://dio.me">dio.me</a> e se cadastre agora</p>
+    <p>Acesse <a href="https://dio.me" style="color:rgb(51, 168, 219);">dio.me</a> e se cadastre agora</p>
   </footer>
 </body>
 </html>
