--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   </main>
   <footer>
     <img class="dio-logo" src="assets/images/dio-logo.png" title="Logotipo DIO com o texto make the change" alt="Logotipo DIO com o texto make the change">
-    <p>Acesse <a href="https://dio.me" style="color:rgb(51, 168, 219);">dio.me</a> e se cadastre agora</p>
+    <p style="color: white;">Acesse <a href="https://dio.me" style="color:rgb(51, 168, 219);">dio.me</a> e se cadastre agora</p>
   </footer>
 </body>
 </html>
